--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <tbody>
             <tr>
                 <td>
-                    <a href="/polnikov.github.io/index_ru.html" 1
+                    <a href="/polnikov.github.io/index_ru.html">1</a>
                 </td>
                 <td>
                     2
