--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <tbody>
             <tr>
                 <td>
-                    <a href="/polnikov.github.io/index_ru.html">1</a>
+                    <div class="link">
+                        <a href="/polnikov.github.io/index_ru.html">1</a>
+                    </div>
                 </td>
                 <td>
                     2
