--- a/index.html
+++ b/index.html
@@ -17,18 +17,16 @@
     <table>
         <tbody>
             <tr>
-                <div class="link">
-                    <td>
-                        <a href="/polnikov.github.io/index_ru.html">
-                            <img src="ru.png" alt="RU">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="/polnikov.github.io/index_en.html">
-                            <img src="en.png" alt="EN">
-                        </a>
-                    </td>
-                </div>
+                <td>
+                    <a href="/polnikov.github.io/index_ru.html">
+                        <img src="ru.png" width="60" height="60" alt="RU">
+                    </a>
+                </td>
+                <td>
+                    <a href="/polnikov.github.io/index_en.html">
+                        <img src="en.png" width="60" height="60" alt="EN">
+                    </a>
+                </td>
             </tr>
         </tbody>
     </table>
