--- a/index_ru.html
+++ b/index_ru.html
@@ -11,8 +11,10 @@
     <link rel="stylesheet" href="style_lng.css">
     <title>Юрий Польников CV</title>
 </head>
-<body>
-    Python разработчик
+<body class="ru">
+    <div class="container">
+        Python разработчик
+    </div>
     
 </body>
 </html>
