--- a/index_ru.html
+++ b/index_ru.html
@@ -13,8 +13,40 @@
 </head>
 <body class="ru">
     <div class="container">
-        Python разработчик
+        <table>
+            <tbody>
+                <tr>
+                    Python разработчик
+                </tr>
+                <tr>
+                    <td rowspan="8">
+                        фото
+                    </td>
+                    <td>
+                        Юрий Польников
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Дата рождения
+                    </td>
+                    <td>
+                        25.05.1985
+                    </td>
+                </tr>
+
+
+
+
+
+
+
+
+
+
+
+            </tbody>
+        </table>
     </div>
-    
 </body>
 </html>
