--- a/index_ru.html
+++ b/index_ru.html
@@ -28,10 +28,58 @@
                 </tr>
                 <tr>
                     <td>
-                        Дата рождения
+                        Дата рождения:
                     </td>
                     <td>
                         25.05.1985
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Город:
+                    </td>
+                    <td>
+                        Россия, Санкт-Петербург
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Телефон:
+                    </td>
+                    <td>
+                        +7 (905) 208-68-86
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Telegram:
+                    </td>
+                    <td>
+                        Россия, Санкт-Петербург
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        E-mail:
+                    </td>
+                    <td>
+                        iuriipolnikov@gmail.com
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        GitHub:
+                    </td>
+                    <td>
+                        https://github.com/IuriiPolnikov
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        LinkedIn:
+                    </td>
+                    <td>
+                        https://www.linkedin.com/in/iuriipolnikov
                     </td>
                 </tr>
 
