--- a/index_ru.html
+++ b/index_ru.html
@@ -13,14 +13,14 @@
 </head>
 <body class="ru">
     <div class="container">
-        <table>
+        <table class="table table-bordered">
             <tbody>
                 <tr>
                     Python разработчик
                 </tr>
                 <tr>
                     <td rowspan="8">
-                        фото
+                        <img src="Polnikov.jpg" class="rounded mx-auto d-block" width="350" height="450" alt="photo">
                     </td>
                     <td>
                         Юрий Польников
