--- a/index_ru.html
+++ b/index_ru.html
@@ -22,7 +22,7 @@
                     <td rowspan="8">
                         <img src="Polnikov.jpg" class="rounded mx-auto d-block" width="175" height="225" alt="photo">
                     </td>
-                    <td colspan="2" height="28,125">
+                    <td colspan="2" height="28">
                         <span>Юрий Польников</span>
                     </td>
                 </tr>
@@ -85,6 +85,25 @@
                             https://www.linkedin.com/in/iuriipolnikov
                         </a>
                     </td>
+                </tr>
+                <tr>
+                    ОПЫТ РАБОТЫ
+                </tr>
+                <tr colspan="3">
+                    <li>
+                        2,5 месяца / 05.2021 - 07.2021 / проходил обучение на курсе «Learn Python»
+                        Разработка проекта на Django (https://github.com/IuriiPolnikov/Student_Rating).
+                        2 года 10 месяцев / 09.2018 - 07.2021
+                        Санкт-Петербургский государственный архитектурно-строительный университет
+                        Заместитель декана по учебной работе
+                        10 лет 5 месяцев / 02.2011 - 07.2021
+                        Санкт-Петербургский государственный архитектурно-строительный университет
+                        Старший преподаватель
+                        4 года 5 месяцев / 02.2013 - 07.2017 
+                        Архитектурное бюро «СТУДИЯ-17»
+                        Главный инженер проектов
+                    </li>
+
                 </tr>
 
 
