--- a/index_ru.html
+++ b/index_ru.html
@@ -100,27 +100,27 @@
                 <tr>
                     <td>
                         <li>
-                            <p>2,5 месяца / 05.2021 - 07.2021 / проходил обучение на курсе «Learn Python»</p>
-                            <p>Разработка проекта на Django 
+                            2,5 месяца / 05.2021 - 07.2021 / проходил обучение на курсе «Learn Python»<br>
+                            Разработка проекта на Django 
                                 <a href="https://github.com/IuriiPolnikov/Student_Rating">
                                     (https://github.com/IuriiPolnikov/Student_Rating)
                                 </a>.
-                            </p>
+                            <br>
                         </li>
                         <li>
-                            <p>2 года 10 месяцев / 09.2018 - 07.2021</p>
-                            <p>Санкт-Петербургский государственный архитектурно-строительный университет</p>
-                            <p>Заместитель декана по учебной работе</p>
+                            2 года 10 месяцев / 09.2018 - 07.2021<br>
+                            Санкт-Петербургский государственный архитектурно-строительный университет<br>
+                            Заместитель декана по учебной работе<br>
                         </li>
                         <li>
-                            <p>10 лет 5 месяцев / 02.2011 - 07.2021</p>
-                            <p>Санкт-Петербургский государственный архитектурно-строительный университет</p>
-                            <p>Старший преподаватель кафедры Теплогазоснабжения и вентиляции</p>
+                            10 лет 5 месяцев / 02.2011 - 07.2021<br>
+                            Санкт-Петербургский государственный архитектурно-строительный университет<br>
+                            Старший преподаватель кафедры Теплогазоснабжения и вентиляции</>
                         </li>
                         <li>
-                            <p>4 года 5 месяцев / 02.2013 - 07.2017 </p>
-                            <p>Архитектурное бюро «СТУДИЯ-17»</p>
-                            <p>Главный инженер проектов</p>
+                            4 года 5 месяцев / 02.2013 - 07.2017 <br>
+                            Архитектурное бюро «СТУДИЯ-17»<br>
+                            Главный инженер проектов<br>
                         </li>
                     </td>
                 </tr>
