--- a/index_ru.html
+++ b/index_ru.html
@@ -107,27 +107,26 @@
                                     (https://github.com/IuriiPolnikov/Student_Rating)
                                 </a>.
                             </p>
-                            <br>
                         </li>
                         <li>
                             <p>
                                 2 года 10 месяцев / 09.2018 - 07.2021<br>
                                 Санкт-Петербургский государственный архитектурно-строительный университет<br>
-                                Заместитель декана по учебной работе<br>
+                                Заместитель декана по учебной работе
                             </p>
                         </li>
                         <li>
                             <p>
                                 10 лет 5 месяцев / 02.2011 - 07.2021<br>
                                 Санкт-Петербургский государственный архитектурно-строительный университет<br>
-                                Старший преподаватель кафедры Теплогазоснабжения и вентиляции<br>
+                                Старший преподаватель кафедры Теплогазоснабжения и вентиляции
                         </p>
                         </li>
                         <li>
                             <p>
                                 4 года 5 месяцев / 02.2013 - 07.2017 <br>
                                 Архитектурное бюро «СТУДИЯ-17»<br>
-                                Главный инженер проектов<br>
+                                Главный инженер проектов
                             </p>
                         </li>
                     </td>
