--- a/index_ru.html
+++ b/index_ru.html
@@ -89,6 +89,7 @@
                 </tr>
             </tbody>
         </table>
+
         <table id="t02" class="table table-bordered">
             <tbody>
                 <tr>
@@ -129,6 +130,44 @@
                                 Архитектурное бюро «СТУДИЯ-17»<br>
                                 Главный инженер проектов
                             </p>
+                        </li>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="chapter">
+                            НАВЫКИ
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <li>
+                            базовые навыки работы с Flask и Django
+                        </li>
+                        <li>
+                            работа с GitHub
+                        </li>
+                        <li>
+                            опыт работы с HTML5, CSS3, Bootstrap
+                        </li>
+                        <li>
+                            сертификат CSoft по Revit
+                        </li>
+                        <li>
+                            изученная литература:
+                            <li>
+                                Автоматизация рутинных задач с помощью Python: практическое руководство для начинающих<br>
+                                Эл Свейгарт
+                            </li>
+                            <li>
+                                Грокаем алгоритмы<br>
+                                Бхаргава Адить
+                            </li>
+                            <li>
+                                Простой Python. Современный стиль программирования (в процессе)<br>
+                                Любанович Билл
+                            </li>
                         </li>
                     </td>
                 </tr>
