--- a/index_ru.html
+++ b/index_ru.html
@@ -63,7 +63,9 @@
                         E-mail:
                     </td>
                     <td>
-                        iuriipolnikov@gmail.com
+                        <a href="mailto:iuriipolnikov@gmail.com">
+                            iuriipolnikov@gmail.com
+                        </a>
                     </td>
                 </tr>
                 <tr>
