--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <tbody>
             <tr>
                 <td>
-                    <a href="/polnikov/index_ru.html">
+                    <a href="https://polnikov.github.io/polnikov/index_ru.html">
                         <img src="ru.png" width="60" height="60" alt="RU">
                     </a>
                 </td>
