--- a/index_ru.html
+++ b/index_ru.html
@@ -22,7 +22,7 @@
                 </tr>
                 <tr>
                     <td rowspan="8">
-                        <img src="Polnikov.jpg" class="rounded mx-auto d-block" width="185" height="235" alt="photo">
+                        <img src="polnikov.jpg" class="rounded mx-auto d-block" width="185" height="235" alt="photo">
                     </td>
                     <td colspan="2" height="5">
                         <span>Юрий Польников</span>
