--- a/index_ru.html
+++ b/index_ru.html
@@ -75,8 +75,8 @@
                         GitHub:
                     </td>
                     <td>
-                        <a href="https://github.com/IuriiPolnikov">
-                            https://github.com/IuriiPolnikov
+                        <a href="https://github.com/polnikov">
+                            https://github.com/polnikov
                         </a>
                     </td>
                 </tr>
@@ -109,7 +109,7 @@
                                 2,5 месяца / 05.2021 - 07.2021 / проходил обучение на курсе «Learn Python»<br>
                                 Разработка проекта на Django 
                                 <a href="https://github.com/IuriiPolnikov/Student_Rating">
-                                    (https://github.com/IuriiPolnikov/Student_Rating)
+                                    (https://github.com/polnikov/Student_Rating)
                                 </a>.
                             </p>
                         </li>
