--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <tbody>
             <tr>
                 <td>
-                    <a href="/polnikov/index_ru.html">
+                    <a href="/index_ru.html">
                         <img src="ru.png" width="60" height="60" alt="RU">
                     </a>
                 </td>
                 <td>
                 </td>
                 <td>
-                    <a href="/polnikov/index_en.html">
+                    <a href="/index_en.html">
                         <img src="en.png" width="60" height="60" alt="EN">
                     </a>
                 </td>
