--- a/index_en.html
+++ b/index_en.html
@@ -105,8 +105,8 @@
                     <td>
                         <li>
                             <p>
-                                2,5 месяца / 05.2021 - 07.2021 / проходил обучение на курсе «Learn Python»<br>
-                                Разработка проекта на Django 
+                                2,5 months / 05.2021 - 07.2021 / trained on the course «Learn Python»<br>
+                                Django project development
                                 <a href="https://github.com/IuriiPolnikov/Student_Rating">
                                     (https://github.com/polnikov/Student_Rating)
                                 </a>.
@@ -114,23 +114,23 @@
                         </li>
                         <li>
                             <p>
-                                2 года 10 месяцев / 09.2018 - 07.2021<br>
+                                2 years 10 months / 09.2018 - 07.2021<br>
                                 Saint Petersburg State University of Architecture and Civil Engineering<br>
-                                Заместитель декана по учебной работе
+                                Deputy Dean For Academic Affairs
                             </p>
                         </li>
                         <li>
                             <p>
-                                10 лет 5 месяцев / 02.2011 - 07.2021<br>
+                                10 years 5 months / 02.2011 - 07.2021<br>
                                 Saint Petersburg State University of Architecture and Civil Engineering<br>
-                                Старший преподаватель кафедры Теплогазоснабжения и вентиляции
+                                Senior Lecturer of the Department of Heat and Gas Supply and Ventilation
                         </p>
                         </li>
                         <li>
                             <p>
-                                4 года 5 месяцев / 02.2013 - 07.2017 <br>
-                                Архитектурное бюро «СТУДИЯ-17»<br>
-                                Главный инженер проектов
+                                4 years 5 months / 02.2013 - 07.2017 <br>
+                                Bureau of Architecture «Studio-17»<br>
+                                Chief Project Engineer
                             </p>
                         </li>
                     </td>
@@ -146,27 +146,27 @@
                 <tr>
                     <td>
                         <li>
-                            базовые навыки работы с Flask и Django
+                            basic skills of working with Flask & Django
                         </li>
                         <li>
-                            работа с GitHub
+                            work with the GitHub
                         </li>
                         <li>
-                            опыт работы с HTML5, CSS3, Bootstrap
+                            work experience with HTML5, CSS3, Bootstrap
                         </li>
                         <li>
-                            сертификат CSoft по Revit
+                            certificate CSoft по Revit
                         </li>
                         <li>
-                            изученная литература:
+                            studied literature:
                             <li>
-                                Автоматизация рутинных задач с помощью Python: практическое руководство для начинающих / Эл Свейгарт
+                                Automate the Boring Stuff with Python / Al Sweigart
                             </li>
                             <li>
-                                Грокаем алгоритмы / Бхаргава Адить
+                                Grokking Algorithms / Aditya Y. Bhargava
                             </li>
                             <li>
-                                Простой Python. Современный стиль программирования (в процессе) / Любанович Билл
+                                Introducing Python (in the process) / Bill Lubanovic
                             </li>
                         </li>
                     </td>
