--- a/index_ru.html
+++ b/index_ru.html
@@ -160,13 +160,13 @@
                         <li>
                             изученная литература:
                             <li>
-                                Автоматизация рутинных задач с помощью Python: практическое руководство для начинающих / Эл Свейгарт
+                                Автоматизация рутинных задач с помощью Python / Эл Свейгарт
                             </li>
                             <li>
                                 Грокаем алгоритмы / Бхаргава Адить
                             </li>
                             <li>
-                                Простой Python. Современный стиль программирования (в процессе) / Любанович Билл
+                                Простой Python (в процессе) / Любанович Билл
                             </li>
                         </li>
                     </td>
