--- a/index_ru.html
+++ b/index_ru.html
@@ -159,15 +159,11 @@
                         </li>
                         <li>
                             изученная литература:
-                            <li>
+                            <div class="indent">
                                 Автоматизация рутинных задач с помощью Python / Эл Свейгарт
-                            </li>
-                            <li>
                                 Грокаем алгоритмы / Бхаргава Адить
-                            </li>
-                            <li>
                                 Простой Python (в процессе) / Любанович Билл
-                            </li>
+                            </div>
                         </li>
                     </td>
                 </tr>
