--- a/index_en.html
+++ b/index_en.html
@@ -159,15 +159,11 @@
                         </li>
                         <li>
                             studied literature:
-                            <li>
-                                Automate the Boring Stuff with Python / Al Sweigart
-                            </li>
-                            <li>
-                                Grokking Algorithms / Aditya Y. Bhargava
-                            </li>
-                            <li>
+                            <div class="indent">
+                                Automate the Boring Stuff with Python / Al Sweigart<br>
+                                Grokking Algorithms / Aditya Y. Bhargava<br>
                                 Introducing Python (in the process) / Bill Lubanovic
-                            </li>
+                            </div>
                         </li>
                     </td>
                 </tr>
