--- a/index_ru.html
+++ b/index_ru.html
@@ -160,8 +160,8 @@
                         <li>
                             изученная литература:
                             <div class="indent">
-                                Автоматизация рутинных задач с помощью Python / Эл Свейгарт
-                                Грокаем алгоритмы / Бхаргава Адить
+                                Автоматизация рутинных задач с помощью Python / Эл Свейгарт<br>
+                                Грокаем алгоритмы / Бхаргава Адить<br>
                                 Простой Python (в процессе) / Любанович Билл
                             </div>
                         </li>
