--- a/index_en.html
+++ b/index_en.html
@@ -160,7 +160,7 @@
                         <li>
                             studied literature:
                             <div class="indent">
-                                Automate the Boring Stuff with Python / Al Sweigart<br>
+                                <dd>Automate the Boring Stuff with Python / Al Sweigart</dd><br>
                                 Grokking Algorithms / Aditya Y. Bhargava<br>
                                 Introducing Python (in the process) / Bill Lubanovic
                             </div>
