--- a/index_en.html
+++ b/index_en.html
@@ -159,11 +159,9 @@
                         </li>
                         <li>
                             studied literature:
-                            <div class="indent">
-                                <dd>Automate the Boring Stuff with Python / Al Sweigart</dd><br>
+                                Automate the Boring Stuff with Python / Al Sweigart<br>
                                 Grokking Algorithms / Aditya Y. Bhargava<br>
                                 Introducing Python (in the process) / Bill Lubanovic
-                            </div>
                         </li>
                     </td>
                 </tr>
