--- a/index_en.html
+++ b/index_en.html
@@ -158,7 +158,7 @@
                             certificate CSoft по Revit
                         </li>
                         <li>
-                            studied literature:
+                            studied literature:<br>
                                 Automate the Boring Stuff with Python / Al Sweigart<br>
                                 Grokking Algorithms / Aditya Y. Bhargava<br>
                                 Introducing Python (in the process) / Bill Lubanovic
