--- a/index_ru.html
+++ b/index_ru.html
@@ -158,12 +158,10 @@
                             сертификат CSoft по Revit
                         </li>
                         <li>
-                            изученная литература:
-                            <div class="indent">
+                            изученная литература:<br>
                                 Автоматизация рутинных задач с помощью Python / Эл Свейгарт<br>
                                 Грокаем алгоритмы / Бхаргава Адить<br>
                                 Простой Python (в процессе) / Любанович Билл
-                            </div>
                         </li>
                     </td>
                 </tr>
