--- a/index_ru.html
+++ b/index_ru.html
@@ -84,8 +84,8 @@
                         LinkedIn:
                     </td>
                     <td>
-                        <a href="https://www.linkedin.com/in/iuriipolnikov">
-                            https://www.linkedin.com/in/iuriipolnikov
+                        <a href="https://www.linkedin.com/in/polnikov">
+                            https://www.linkedin.com/in/polnikov
                         </a>
                     </td>
                 </tr>
