--- a/index_ru.html
+++ b/index_ru.html
@@ -121,11 +121,22 @@
                     <td>
                         <li>
                             <p>
+                                08.2021 / проходил обучение на курсе «Python для начинающих» на Stepik.org<br>
+                                <a href="https://github.com/polnikov/polnikov.github.io/blob/f83a9113c18ee07cffbb6e2df9f038ac912c2a36/doc/certificates/Certificate_Stepik_(Pytthon%20for%20beginners)_21_ru.pdf">
+                                Сертификат
+                                </a>
+                            </p>
+                        </li>
+                        <li>
+                            <p>
                                 2,5 месяца / 05.2021 - 07.2021 / проходил обучение на курсе «Learn Python»<br>
                                 Разработка проекта на Django 
                                 <a href="https://github.com/IuriiPolnikov/Student_Rating">
                                     (https://github.com/polnikov/Student_Rating)
-                                </a>.
+                                </a>
+                                <a href="https://github.com/polnikov/polnikov.github.io/blob/f83a9113c18ee07cffbb6e2df9f038ac912c2a36/doc/certificates/Certificate_Learn_Python_21_ru.pdf">
+                                Сертификат
+                                </a>
                             </p>
                         </li>
                         <li>
