--- a/index_en.html
+++ b/index_en.html
@@ -129,7 +129,7 @@
                         </li>
                         <li>
                             <p>
-                                2,5 months / 05.2021 - 07.2021 / trained on the course «Learn Python»<br>
+                                2,5 months / 05.2021 - 07.2021 / trained on the course «Learn Python» from moscowpython.ru/<br>
                                 Django project development
                                 <a href="https://github.com/IuriiPolnikov/Student_Rating">
                                     (https://github.com/polnikov/Student_Rating)
