--- a/index_en.html
+++ b/index_en.html
@@ -121,8 +121,24 @@
                     <td>
                         <li>
                             <p>
-                                08.2021 / trained on the course «Python for beginners» from Stepik.org<br>
-                                <a href="https://github.com/polnikov/polnikov.github.io/blob/f83a9113c18ee07cffbb6e2df9f038ac912c2a36/doc/certificates/Certificate_Stepik_(Pytthon%20for%20beginners)_21_ru.pdf">
+                                08.2021 / trained on the course «Intermediate Python» from sololearn.com<br>
+                                <a href="https://github.com/polnikov/polnikov.github.io/blob/545947038ed6c74e61d0eb6e6f9310062303abf1/doc/certificates/Certificate_Sololearn_(Intermediate%20Python)_21_en.jpg">
+                                Certificate
+                                </a>
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                08.2021 / trained on the course «Python for Beginners» from sololearn.com<br>
+                                <a href="https://github.com/polnikov/polnikov.github.io/blob/545947038ed6c74e61d0eb6e6f9310062303abf1/doc/certificates/Certificate_Sololearn_(Python%20for%20Beginners)_21_en.jpg">
+                                Certificate
+                                </a>
+                            </p>
+                        </li>                      
+                        <li>
+                            <p>
+                                08.2021 / trained on the course «Python for beginners» from stepik.org<br>
+                                <a href="https://github.com/polnikov/polnikov.github.io/blob/545947038ed6c74e61d0eb6e6f9310062303abf1/doc/certificates/Certificate_Stepik_(Python%20for%20beginners)_21_ru.pdf">
                                 Certificate
                                 </a>
                             </p>
