--- a/index_ru.html
+++ b/index_ru.html
@@ -105,6 +105,14 @@
                     <td>
                         <li>
                             <p>
+                                09.2021 / проходил обучение на курсе «"Поколение Python": курс для продвинутых» на Stepik.org<br>
+                                <a href="https://github.com/polnikov/polnikov.github.io/blob/4c65b3f16b1f87b1422816d3504c35b752caa6d3/doc/certificates/Certificate_Stepik_(Python%20for%20advanced)_21_ru.pdf">
+                                Сертификат
+                                </a>
+                            </p>
+                        </li>
+                        <li>
+                            <p>
                                 08.2021 / проходил обучение на курсе «Intermediate Python» на sololearn.com<br>
                                 <a href="https://github.com/polnikov/polnikov.github.io/blob/545947038ed6c74e61d0eb6e6f9310062303abf1/doc/certificates/Certificate_Sololearn_(Intermediate%20Python)_21_en.jpg">
                                 Сертификат
