--- a/index_ru.html
+++ b/index_ru.html
@@ -105,7 +105,7 @@
                     <td>
                         <li>
                             <p>
-                                09.2021 / проходил обучение на курсе «"Поколение Python": курс для продвинутых» на Stepik.org<br>
+                                09.2021 / проходил обучение на курсе «Поколение Python: курс для продвинутых» на Stepik.org<br>
                                 <a href="https://github.com/polnikov/polnikov.github.io/blob/4c65b3f16b1f87b1422816d3504c35b752caa6d3/doc/certificates/Certificate_Stepik_(Python%20for%20advanced)_21_ru.pdf">
                                 Сертификат
                                 </a>
