--- a/index_en.html
+++ b/index_en.html
@@ -105,6 +105,14 @@
                     <td>
                         <li>
                             <p>
+                                09.2021 / trained on the course «Python Core» from sololearn.com<br>
+                                <a href="https://github.com/polnikov/polnikov.github.io/blob/d6411ad47b832c9fb13d1ea7467584ee2c3f980d/doc/certificates/Certificate_Sololearn_(Python%20Core)_21_en.jpg">
+                                Certificate
+                                </a>
+                            </p>
+                        </li>
+                        <li>
+                            <p>
                                 09.2021 / trained on the course «Python for advanced» from stepik.org<br>
                                 <a href="https://github.com/polnikov/polnikov.github.io/blob/4c65b3f16b1f87b1422816d3504c35b752caa6d3/doc/certificates/Certificate_Stepik_(Python%20for%20advanced)_21_ru.pdf">
                                 Certificate
