--- a/index_ru.html
+++ b/index_ru.html
@@ -105,41 +105,22 @@
                     <td>
                         <li>
                             <p>
-                                09.2021 / проходил обучение на курсе «Python Core» на sololearn.com<br>
-                                <a href="https://github.com/polnikov/polnikov.github.io/blob/d6411ad47b832c9fb13d1ea7467584ee2c3f980d/doc/certificates/Certificate_Sololearn_(Python%20Core)_21_en.jpg">
-                                Сертификат
-                                </a>
+                                06.2021 - 10.2021 / проходил обучение на курсах sololearn.com:<br>
+                                - Python for Beginners;
+                                - Python Core;
+                                - Intermediate Python;                                
+                                <a href="https://github.com/polnikov/polnikov.github.io/tree/main/doc/certificates">
+                                Сертификаты
+                                </a>                                
                             </p>
                         </li>
                         <li>
                             <p>
-                                09.2021 / проходил обучение на курсе «Поколение Python: курс для продвинутых» на Stepik.org<br>
-                                <a href="https://github.com/polnikov/polnikov.github.io/blob/4c65b3f16b1f87b1422816d3504c35b752caa6d3/doc/certificates/Certificate_Stepik_(Python%20for%20advanced)_21_ru.pdf">
-                                Сертификат
-                                </a>
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                08.2021 / проходил обучение на курсе «Intermediate Python» на sololearn.com<br>
-                                <a href="https://github.com/polnikov/polnikov.github.io/blob/545947038ed6c74e61d0eb6e6f9310062303abf1/doc/certificates/Certificate_Sololearn_(Intermediate%20Python)_21_en.jpg">
-                                Сертификат
-                                </a>
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                08.2021 / проходил обучение на курсе «Python for Beginners» на sololearn.com<br>
-                                <a href="https://github.com/polnikov/polnikov.github.io/blob/545947038ed6c74e61d0eb6e6f9310062303abf1/doc/certificates/Certificate_Sololearn_(Python%20for%20Beginners)_21_en.jpg">
-                                Сертификат
-                                </a>
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                08.2021 / проходил обучение на курсе «Python для начинающих» на Stepik.org<br>
-                                <a href="https://github.com/polnikov/polnikov.github.io/blob/545947038ed6c74e61d0eb6e6f9310062303abf1/doc/certificates/Certificate_Stepik_(Python%20for%20beginners)_21_ru.pdf">
-                                Сертификат
+                                08.2021 - 09.2021 / проходил обучение на курсах stepik.org<br>
+                                - Python для начинающих;
+                                - Поколение Python: курс для продвинутых;
+                                <a href="https://github.com/polnikov/polnikov.github.io/tree/main/doc/certificates">
+                                Сертификаты
                                 </a>
                             </p>
                         </li>
