--- a/index_ru.html
+++ b/index_ru.html
@@ -106,9 +106,9 @@
                         <li>
                             <p>
                                 06.2021 - 10.2021 / проходил обучение на курсах sololearn.com:<br>
-                                - Python for Beginners;
-                                - Python Core;
-                                - Intermediate Python;                                
+                                - Python for Beginners;<br>
+                                - Python Core;<br>
+                                - Intermediate Python;<br>                                
                                 <a href="https://github.com/polnikov/polnikov.github.io/tree/main/doc/certificates">
                                 Сертификаты
                                 </a>                                
@@ -117,8 +117,8 @@
                         <li>
                             <p>
                                 08.2021 - 09.2021 / проходил обучение на курсах stepik.org<br>
-                                - Python для начинающих;
-                                - Поколение Python: курс для продвинутых;
+                                - Python для начинающих;<br>
+                                - Поколение Python: курс для продвинутых;<br>
                                 <a href="https://github.com/polnikov/polnikov.github.io/tree/main/doc/certificates">
                                 Сертификаты
                                 </a>
