--- a/index_ru.html
+++ b/index_ru.html
@@ -105,6 +105,15 @@
                     <td>
                         <li>
                             <p>
+                                11.2021 / сдан сертификационный экзамен:<br>
+                                - [PCAP-31-03] PCAP – Certified Associate in Python Programming<br>
+                                <a href="https://www.credly.com/badges/d2216872-e1d4-4af0-bd94-54abda90bd48/linked_in">
+                                Сертификат и описание
+                                </a>                                
+                            </p>
+                        </li>
+                        <li>
+                            <p>
                                 06.2021 - 10.2021 / проходил обучение на курсах sololearn.com:<br>
                                 - Python for Beginners;<br>
                                 - Python Core;<br>
@@ -116,9 +125,10 @@
                         </li>
                         <li>
                             <p>
-                                08.2021 - 09.2021 / проходил обучение на курсах stepik.org<br>
+                                08.2021 - 12.2021 / проходил обучение на курсах stepik.org<br>
                                 - Python для начинающих;<br>
                                 - Поколение Python: курс для продвинутых;<br>
+                                - Автоматизация тестирования с помощью Selenium и Python;<br>
                                 <a href="https://github.com/polnikov/polnikov.github.io/tree/main/doc/certificates">
                                 Сертификаты
                                 </a>
