--- a/index_en.html
+++ b/index_en.html
@@ -105,44 +105,35 @@
                     <td>
                         <li>
                             <p>
-                                09.2021 / trained on the course «Python Core» from sololearn.com<br>
-                                <a href="https://github.com/polnikov/polnikov.github.io/blob/d6411ad47b832c9fb13d1ea7467584ee2c3f980d/doc/certificates/Certificate_Sololearn_(Python%20Core)_21_en.jpg">
-                                Certificate
-                                </a>
+                                11.2021 / passed the certification exam:<br>
+                                - [PCAP-31-03] PCAP – Certified Associate in Python Programming<br>
+                                <a href="https://www.credly.com/badges/d2216872-e1d4-4af0-bd94-54abda90bd48/linked_in">
+                                Certificate and description
+                                </a>                                
                             </p>
                         </li>
                         <li>
                             <p>
-                                09.2021 / trained on the course «Python for advanced» from stepik.org<br>
-                                <a href="https://github.com/polnikov/polnikov.github.io/blob/4c65b3f16b1f87b1422816d3504c35b752caa6d3/doc/certificates/Certificate_Stepik_(Python%20for%20advanced)_21_ru.pdf">
-                                Certificate
-                                </a>
+                                06.2021 - 10.2021 / trained on the courses sololearn.com:<br>
+                                - Python for Beginners;<br>
+                                - Python Core;<br>
+                                - Intermediate Python;<br>                                
+                                <a href="https://github.com/polnikov/polnikov.github.io/tree/main/doc/certificates">
+                                Certificates
+                                </a>                                
                             </p>
                         </li>
                         <li>
                             <p>
-                                08.2021 / trained on the course «Intermediate Python» from sololearn.com<br>
-                                <a href="https://github.com/polnikov/polnikov.github.io/blob/545947038ed6c74e61d0eb6e6f9310062303abf1/doc/certificates/Certificate_Sololearn_(Intermediate%20Python)_21_en.jpg">
-                                Certificate
+                                08.2021 - 12.2021 / trained on the courses stepik.org<br>
+                                - Python for Beginners;<br>
+                                - Python for advanced;<br>
+                                - Test automation with Selenium and Python;<br>
+                                <a href="https://github.com/polnikov/polnikov.github.io/tree/main/doc/certificates">
+                                Certificates
                                 </a>
                             </p>
-                        </li>
-                        <li>
-                            <p>
-                                08.2021 / trained on the course «Python for Beginners» from sololearn.com<br>
-                                <a href="https://github.com/polnikov/polnikov.github.io/blob/545947038ed6c74e61d0eb6e6f9310062303abf1/doc/certificates/Certificate_Sololearn_(Python%20for%20Beginners)_21_en.jpg">
-                                Certificate
-                                </a>
-                            </p>
-                        </li>                      
-                        <li>
-                            <p>
-                                08.2021 / trained on the course «Python for beginners» from stepik.org<br>
-                                <a href="https://github.com/polnikov/polnikov.github.io/blob/545947038ed6c74e61d0eb6e6f9310062303abf1/doc/certificates/Certificate_Stepik_(Python%20for%20beginners)_21_ru.pdf">
-                                Certificate
-                                </a>
-                            </p>
-                        </li>
+                        </li>                    
                         <li>
                             <p>
                                 2,5 months / 05.2021 - 07.2021 / trained on the course «Learn Python» from moscowpython.ru<br>
