--- a/index_en.html
+++ b/index_en.html
@@ -105,11 +105,26 @@
                     <td>
                         <li>
                             <p>
+                                11.2021 - until now / Associate QA Engineer in Genesys (www.genesys.com):<br>
+                            </p>
+                        </li>
+                        <li>
+                            <p>
                                 11.2021 / passed the certification exam:<br>
                                 - [PCAP-31-03] PCAP – Certified Associate in Python Programming<br>
                                 <a href="https://www.credly.com/badges/d2216872-e1d4-4af0-bd94-54abda90bd48/linked_in">
                                 Certificate and description
                                 </a>                                
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                2 months / 09.2021 - 11.2021 / Software Development Trainee in KRAUD (kraud.ru):<br>
+                                - support and development of an internal project on python/django/postreSQL<br>
+                                - creating new project applications<br>
+                                - setting up synchronization of target application information with 1c, okdesk, confluence, MS Active Directory<br>
+                                - simple front-end aplication on keenthemes<br>
+                                - <br>
                             </p>
                         </li>
                         <li>
